CREATED deposit method

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,1 +1,4 @@
-<p>homepage works!</p>
+<button routerLink="/deposit">Deposit</button>
+<button routerLink="/withdraw">Withdraw</button>
+<button routerLink="/transfer">Transfer</button>
+<button routerLink="/history">Transactions History</button>
