--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,4 +1,180 @@
-<form>
+<div class="mycontainer">
+  <div class="innerC">
+    <div class="welcomeSection">
+      <p style="font-size: x-large; color: white; margin: 0">Welcome to</p>
+      <p style="font-size: 50px; color: white; margin: 0; font-weight: bolder">
+        AMWAJ BANK
+      </p>
+      <p style="font-size: large; color: white; margin: 0">
+        Create new account in our bank
+      </p>
+    </div>
+    <div class="formSection">
+      <div class="logoSection">
+        <div>logo</div>
+        <p class="english">AMWAJ BANK</p>
+        <p class="arabic">بنك أمواج</p>
+      </div>
+      <div class="fieldsSection">
+        <p style="font-size: x-large">Create New Account</p>
+        <p style="font-size: x-small; color: grey; margin: 0">
+          PLease fill all the fields below
+        </p>
+
+        <form>
+          <div class="form-group">
+            <input
+              class="form-control"
+              style="
+                width: 300px;
+                border-radius: 0px;
+                margin: 5px;
+                border-top: 0px;
+                border-right: 0px;
+                border-left: 0px;
+                padding: 0px;
+              "
+              type="text"
+              name="firstName"
+              id="firstName"
+              placeholder="First Name"
+              ngModel
+              (change)="log(firstName)"
+              #firstName="ngModel"
+              required
+              minlength="3"
+              pattern="[a-z,A-Z]{3,30}"
+            />
+            <div
+              class="alertField"
+              *ngIf="firstName.touched && !firstName.valid"
+            >
+              <div *ngIf="firstName.errors?.['required']">
+                Please enter your first Name
+              </div>
+              <div *ngIf="firstName.errors?.['minlength']">
+                Please enter atleast 3 characters
+              </div>
+              <div *ngIf="firstName.errors?.['pattern']">
+                Please enter a valid first Name
+              </div>
+            </div>
+            <input
+              class="form-control"
+              style="
+                width: 300px;
+                border-radius: 0px;
+                margin: 5px;
+                border-top: 0px;
+                border-right: 0px;
+                border-left: 0px;
+                padding: 0px;
+              "
+              type="text"
+              name="lastName"
+              id="lastName"
+              placeholder="Last Name"
+              ngModel
+              #lastName="ngModel"
+              required
+              minlength="3"
+              pattern="[a-z,A-Z]{4,30}"
+            />
+            <div class="alertField" *ngIf="lastName.touched && !lastName.valid">
+              <div *ngIf="lastName.errors?.['required']">
+                Please enter your Last Name
+              </div>
+              <div *ngIf="lastName.errors?.['minlength']">
+                Please enter atleast 3 characters
+              </div>
+              <div *ngIf="lastName.errors?.['pattern']">
+                Please enter a valid Last Name
+              </div>
+            </div>
+            <input
+              class="form-control"
+              style="
+                width: 300px;
+                border-radius: 0px;
+                margin: 5px;
+                border-top: 0px;
+                border-right: 0px;
+                border-left: 0px;
+                padding: 0px;
+              "
+              type="text"
+              name="civilId"
+              id="civilId"
+              placeholder="Civil Id"
+              ngModel
+              #civilId="ngModel"
+              required
+              minlength="12"
+              pattern="[0-9]{12}"
+            />
+            <div class="alertField" *ngIf="civilId.touched && !civilId.valid">
+              <div *ngIf="civilId.errors?.['required']">
+                Please enter your Civil Id
+              </div>
+
+              <div *ngIf="civilId.errors?.['pattern']">
+                Please enter a valid civil Id of length 12 numbers
+              </div>
+            </div>
+            <input
+              class="form-control"
+              style="
+                width: 300px;
+                border-radius: 0px;
+                margin: 5px;
+                border-top: 0px;
+                border-right: 0px;
+                border-left: 0px;
+                padding: 0px;
+              "
+              type="text"
+              name="password"
+              id="password"
+              placeholder="Password"
+              ngModel
+              #password="ngModel"
+              required
+              minlength="8"
+              pattern="[a-z]{8-30}"
+            />
+          </div>
+          <div class="alertField">
+            <div *ngIf="checkCapital(password)">
+              Must contain atleast 1 Capital Case Letter
+            </div>
+            <div *ngIf="checkSmall(password)">
+              Must contain atleast 1 Small Case Letter
+            </div>
+            <div *ngIf="checkNum(password)">Must conatin atleast 1 Number</div>
+            <div *ngIf="checkSpecialChar(password)">
+              Must conatin atleast 1 Special Character
+            </div>
+          </div>
+        </form>
+        <button
+          class="loginBtn"
+          (click)="
+            signup(
+              firstName.value,
+              lastName.value,
+              civilId.value,
+              password.value
+            )
+          "
+        >
+          Sign up
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- <form>
   <div class="form-group">
     <input
       class="form-control"
@@ -102,4 +278,4 @@
   >
     Sign up
   </button>
-</form>
+</form> -->
