--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -28,6 +28,10 @@
     </tr>
   </tbody>
 </table> -->
+<div class="navbarr">
+  <button class="navBtn" routerLink="/homepage">Home</button>
+</div>
+<p style="margin-left: 20px; font-size: xx-large">Transactions</p>
 <div *ngFor="let transaction of alltransactions; let i = index">
   <div
     class="transactionCard"
